--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 name: paradoxxx zero
 markdown: redcarpet
 pygments: true
+description: Random interesting things
+url: http://paradoxxxzero.github.io
