--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "preact": "^10.0.0",
+    "react-icons": "^3.8.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "three": "^0.110.0"
