--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "build": "rm -fr dist/; NODE_ENV=production webpack"
   },
   "dependencies": {
+    "@babel/runtime": "^7.7.2",
     "preact": "^10.0.0",
     "react-icons": "^3.8.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "three": "^0.110.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
@@ -24,6 +27,7 @@
     "eslint-plugin-react-hooks": "^2.1.2",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.19.1",
     "raw-loader": "^3.1.0",
     "styled-components": "^4.4.1",
     "webpack": "^4.41.0",
