--- a/package.json
+++ b/package.json
@@ -7,31 +7,32 @@
     "build": "rm -fr dist/; NODE_ENV=production webpack"
   },
   "dependencies": {
-    "@babel/runtime": "^7.7.2",
-    "preact": "^10.0.0",
+    "@babel/runtime": "^7.7.5",
+    "anakata": "^0.1.1",
+    "preact": "^10.0.5",
     "react-icons": "^3.8.0",
-    "react-redux": "^7.1.1",
+    "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "three": "^0.110.0"
+    "three": "^0.111.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.3",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-transform-runtime": "^7.7.5",
+    "@babel/preset-env": "^7.7.5",
+    "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
-    "eslint": "^6.5.1",
+    "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "file-loader": "^4.0.0",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.19.1",
-    "raw-loader": "^3.1.0",
+    "raw-loader": "^4.0.0",
     "styled-components": "^4.4.1",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
