--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/runtime": "^7.7.5",
     "anakata": "^0.1.1",
     "preact": "^10.0.5",
+    "react-flip-toolkit": "^7.0.7",
     "react-icons": "^3.8.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
