--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "preact-cli": "^2.2.1",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
     "styled-components": "^4.4.1",
