--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
-    "build": "rm -fr docs/; NODE_ENV=production webpack"
+    "build": "rm -fr docs/; NODE_ENV=production webpack; ./swap.sh"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.5",
@@ -23,12 +23,14 @@
     "@babel/preset-env": "^7.7.5",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.6",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "preact-render-to-string": "^5.1.2",
     "prerender-loader": "^1.3.0",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
