--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
-    "build": "rm -fr docs/*.{html,js,png,jpg}; NODE_ENV=production webpack; ./swap.sh"
+    "build": "rm -fr dist; NODE_ENV=production webpack; ./swap.sh; echo 'florian.mounier.dev' > dist/CNAME"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
