Add push command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
-    "build": "rm -fr dist; NODE_ENV=production webpack; ./swap.sh; echo 'florian.mounier.dev' > dist/CNAME"
+    "build": "rm -fr dist; NODE_ENV=production webpack; ./swap.sh",
+    "push": "echo 'florian.mounier.dev' > dist/CNAME && cd dist && git init && git add . && git commit -m'Static build' && git remote add origin git@github.com:paradoxxxzero/paradoxxxzero.github.io.git && git push --force origin master"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
@@ -42,5 +43,6 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
-  }
+  },
+  "version": "0.0.0"
 }
