--- a/package.json
+++ b/package.json
@@ -3,46 +3,46 @@
   "author": "Florian Mounier",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server",
+    "start": "NODE_ENV=development webpack serve",
     "build": "rm -fr dist; NODE_ENV=production webpack; ./swap.sh",
     "push": "echo 'florian.mounier.dev' > dist/CNAME && cd dist && git init && git add . && git commit -m'Static build' && git remote add origin git@github.com:paradoxxxzero/paradoxxxzero.github.io.git && git push --force origin master"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@babel/runtime": "^7.12.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "anakata": "^0.1.2",
-    "preact": "^10.5.3",
-    "react-flip-toolkit": "^7.0.12",
-    "react-redux": "^7.2.1",
+    "preact": "^10.5.12",
+    "react-flip-toolkit": "^7.0.13",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "three": "^0.120.1"
+    "three": "^0.125.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-styled-components": "^1.11.1",
-    "eslint": "^7.10.0",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.18.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-react": "^7.21.2",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "file-loader": "^6.1.0",
-    "html-webpack-plugin": "^4.5.0",
-    "preact-render-to-string": "^5.1.10",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.1",
+    "preact-render-to-string": "^5.1.12",
     "prerender-loader": "^1.3.0",
-    "prettier": "^2.1.2",
-    "raw-loader": "^4.0.1",
-    "styled-components": "^5.2.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "prettier": "^2.2.1",
+    "raw-loader": "^4.0.2",
+    "styled-components": "^5.2.1",
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "version": "0.0.0"
 }
