--- a/package.json
+++ b/package.json
@@ -8,40 +8,47 @@
     "push": "echo 'florian.mounier.dev' > dist/CNAME && cd dist && git init && git add . && git commit -m'Static build' && git remote add origin git@github.com:paradoxxxzero/paradoxxxzero.github.io.git && git push --force origin master"
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.5",
+    "@babel/runtime": "^7.12.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "anakata": "^0.1.2",
+    "four-js": "^0.1.0",
     "preact": "^10.5.12",
     "react-flip-toolkit": "^7.0.13",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "three": "^0.125.1"
+    "three": "^0.125.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest-playwright": "^0.2.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.0.0",
     "preact-render-to-string": "^5.1.12",
     "prerender-loader": "^1.3.0",
     "prettier": "^2.2.1",
     "raw-loader": "^4.0.2",
     "styled-components": "^5.2.1",
-    "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0",
+    "webpack": "^5.20.1",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "version": "0.0.0"
