--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build && cp -f ssr.js build/ &&  echo '{\"type\":  \"module\"}' > build/package.json && node build/ssr.js && rm build/package.json build/ssr.js",
-    "push": "echo 'florian.mounier.dev' > build/CNAME && cd build && git init && git add . && git commit -m'Static build' && git remote add origin git@github.com:paradoxxxzero/paradoxxxzero.github.io.git && git push --force origin master"
+    "push": "echo 'florian.mounier.dev' > build/CNAME && touch build/.nojekyll && cd build && git init && git add . && git commit -m'Static build' && git remote add origin git@github.com:paradoxxxzero/paradoxxxzero.github.io.git && git push --force origin master"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.13",
